# nxshield-bbb

./: .atom-build.yml  CMakeLists.txt  README.md
application/: BaseI2CDevice.cpp  BaseI2CDevice.h  I2CDevice.cpp  I2CDevice.h  NXShieldI2C.cpp  main.cpp  motor_and_touch.cpp  motor_test.cpp  nxtalk.cpp  test.c
application/deprecated/: BaseI2CDevice.cpp  BaseI2CDevice.h  main.cpp  main1.cpp  main2.cpp  nxtalk.cpp  nxtalk.h  test.c
ref/: EVShield-Pins-Used.odt  NXTMMX.cpp
ref/NXShield_examples/motor_and_touch/: motor_and_touch.pde
src/: BaseI2CDevice.cpp  BaseI2CDevice.h  NXShield.cpp  NXShield.h  NXShieldI2C.cpp  NXShieldI2C.h  NxShield.cpp  NxShield.h  SoftI2cMaster.cpp  nxtalk.cpp
src/deprecated/: BaseI2CDevice.cpp  NXShield.h  SHDefines.h
